[tool.poetry]
name = "specsavers"
version = "0.1.0"
description = ""
authors = ["Ali Parandeh <Ali.Parandeh@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
numpy = "^1.20.2"
scikit-learn = "^0.24.1"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
jupyterlab = "^3.0.14"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
